--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [  
+    "onCommand:collab-session.openSession",
+    "onCommand:collab-session.joinSession"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "collab-session.helloWorld",
-        "title": "Hello World"
+        "command": "collab-session.openSession",
+        "title": "Open Collaboration Session"
+      },
+      {
+        "command": "collab-session.joinSession",
+        "title": "Join Collaboration Session"
       }
     ]
   },
