--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [  
+  "activationEvents": [
     "onCommand:collab-session.openSession",
     "onCommand:collab-session.joinSession"
   ],
@@ -18,14 +18,27 @@
     "commands": [
       {
         "command": "collab-session.openSession",
-        "title": "Open Collaboration Session"
+        "title": "Open Session"
       },
       {
         "command": "collab-session.joinSession",
-        "title": "Join Collaboration Session"
+        "title": "Join Session"
+      },
+      {
+        "command": "collab-session.printUsers",
+        "title": "Print Connected Users"
       }
-    ]
+    ],
+    "views": {
+      "explorer": [
+        {
+          "id": "collabSessionUsers",
+          "name": "Connected Users"
+        }
+      ]
+    }
   },
+  
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -35,14 +48,17 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.101.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
+    "@types/vscode": "^1.101.0",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
-    "eslint": "^9.25.1",
-    "typescript": "^5.8.3",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "eslint": "^9.25.1",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "ws": "^8.18.3"
   }
 }
