--- a/package.json
+++ b/package.json
@@ -155,7 +155,8 @@
 
     "server": "node server.js",
     "server:port": "cross-env COLLAB_PORT=3000 node server.js",
-    "dev": "nodemon --watch server.js server.js"
+    "dev": "nodemon --watch server.js server.js",
+    "db:check": "node db-check.js"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.1",
