--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
       {
         "command": "collab-session.toggleQuestionSyncMode",
         "title": "Collab Session: Toggle Question Sync Mode"
-      }
+      },
+      { "command": "collab-session.openMyAnswer",
+        "title": "Collab Session: Open My Answer" }
 
     ],
     "viewsContainers": {
